# real-time-stocks

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
real_time_stocks/: chart_manager.py  config.py  ib_client.py
