[tool.poetry]
name = "real-time-stocks"
version = "0.1.0"
description = ""
authors = ["Itay Ben Haim <benhaimitay@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10"
pydantic = "^2.8.2"
ibapi = "^9.81.1.post1"
pydantic-settings = "^2.4.0"
pandas = "^2.2.2"
lightweight-charts = "^2.0.1"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
